crates/analyzer/tests/snapshots/errors__shadow_builtin_fn_with_var.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: variable name conflicts with built-in function
  ┌─ [snippet]:3:7
  │
3 │   let keccak256: u8 = 10
  │       ^^^^^^^^^ `keccak256` is a built-in function


